--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,11 @@
 version: 2
 jobs:
   build:
-    
-    working_directory: ~/circleci-demo-java-spring
-
+    working_directory: ~/circleci-feature9
     docker:
-      - image: circleci/openjdk:8-jdk-browsers
-      - image: circleci/postgres:9.6.3-alpine
-        environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
-
+      - image: maven:3.5.0-jdk-9
     steps:
-
       - checkout
-
       - restore_cache:
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
-      
-      - run: mvn dependency:go-offline
-      
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
-      
-      - run: mvn package
-      
-      - store_test_results:
-          path: target/surefire-reports
-      
-      - store_artifacts:
-          path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
+          key: circleci-feature9-{{ checksum "pom.xml" }}
+      - run: mvn Main
